@@ -18,17 +18,9 @@ import state.StateWorldSelection
 
 class StateStartMenu(state.State.State):
     NAME = "minecraft:startmenu"
+    CONFIG_LOCATION = "data/minecraft/states/start_menu.json"
 
     def __init__(self): state.State.State.__init__(self)
-
-    def get_parts(self) -> list:
-        return [UIPartLable.UIPartLable("#*menu.game*#", (0, 100), anchor_window="MM", anchor_lable="MM",
-                                        color=(255, 255, 255, 255)),
-                UIPartButton.UIPartButton((200, 15), "#*menu.singleplayer*#", (0, 0), anchor_window="MM",
-                                          anchor_button="MM", on_press=self.on_new_game_press),
-                UIPartButton.UIPartButton((200, 15), "#*menu.quit*#", (0, -20), anchor_window="MM",
-                                          anchor_button="MM", on_press=self.on_quit_game_press),
-                state.StatePartConfigBackground.StatePartConfigBackground()]
 
     def bind_to_eventbus(self):
         self.eventbus.subscribe("render:draw:2d:background", self.on_draw_2d_pre)
